Fix styles and remove core-* elements

--- a/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
@@ -102,7 +102,7 @@
                 this.set("appsArray", array);
             },
             getHref: function (name) {
-                return "/" + name;
+                return "/" + name.toLowerCase();
             }
         });
     </script>
