--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -11,7 +11,7 @@
 
     <!-- Import Starcounter specific components -->
     <link rel="import" href="/sys/starcounter.html" />
-    <!-- Disable untill migrated to Polymer1 <link rel="import" href="/sys/starcounter-debug-aid/src/starcounter-debug-aid.html" /> -->
+    <link rel="import" href="/sys/starcounter-debug-aid/src/starcounter-debug-aid.html" />
 
     <!-- Import our elements -->
     <link rel="import" href="/Launcher/elements/launcher-layout/launcher-main.html" />
