--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/src/juicy-tile-grid.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/src/juicy-tile-grid.html
@@ -3,7 +3,7 @@
 
 @element juicy-tile-grid
 @demo https://Juicy.github.io/juicy-tile-grid/
-version: 0.3.0
+version: 1.0.0
 -->
 <!-- Import juicy-tile-list -->
 <link rel="import" href="../../juicy-tile-list/src/juicy-tile-list.html">
@@ -97,7 +97,6 @@ version: 0.3.0
             var root = this.createShadowRoot();
             var template = scriptDocument.querySelector("#juicy-tile-grid");
             var clone = document.importNode(template.content, true);
-            var gutter = this.getAttribute("gutter");
 
             root.appendChild(clone);
             this.$ = {
@@ -113,9 +112,8 @@ version: 0.3.0
             // IDEA: consider merging with createItemsList, and re-flow setup, to fix Polyjuice glitches (tomalec)
             Package.call(this, this.setup && this.setup.items !== undefined ? this.setup : undefined);
 
-            if (gutter) {
-                this.gutter = parseInt(gutter, 10);
-                this.setup.gutter = this.gutter;
+            if (this.gutter != undefined) {
+                this.setup.gutter = parseInt(this.gutter, 10);
             }
 
             this.createItemsList();
