--- a/src/Launcher/wwwroot/sys/juicy-tiles-setup-sync/src/juicy-tiles-setup-sync.html
+++ b/src/Launcher/wwwroot/sys/juicy-tiles-setup-sync/src/juicy-tiles-setup-sync.html
@@ -1,5 +1,6 @@
 <!--
     Polymer Element to handle `<juicy-tile-list>` (or `-grid`) setup changes (staging, reverting, saving to storage).
+    version: 1.0.0
 -->
 <!-- Import Polymer -->
 <!-- <link rel="import" href="../../polymer/polymer.html"> -->
