--- a/src/Launcher/wwwroot/sys/juicy-tile-list/index.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/index.html
@@ -46,7 +46,7 @@
     <a href="https://github.com/Juicy/juicy-tile-list"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
     <article class="markdown-body">
         <h1>&lt;juicy-tile-list&gt;</h1>
-        <blockquote><p>Masonry-like Polymer Element for sortable tiles that packs efficiently without changing HTML structure (changes CSS only).</p></blockquote>
+        <blockquote><p>Masonry-like Custom Element for sortable tiles that packs efficiently without changing HTML structure (changes CSS only).</p></blockquote>
         <juicy-tile-list gutter="10" refreshonresize>
             <div>0</div>
             <div>
