--- a/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
@@ -117,6 +117,7 @@ version: 1.0.0
         function defaultSetup(tiles, setupItems, allItems, defaultTileSetup) {
             for (var elNo = 0, eLen = tiles.length; elNo < eLen; elNo++) {
                 var tile = tiles[elNo];
+
                 if (!allItems[tile.id]) {
                     var itemSetup = JSON.parse(JSON.stringify(defaultTileSetup));
                     if (setupItems.length == 0) {
@@ -353,10 +354,13 @@ version: 1.0.0
                         doRefresh = true;
                     }
                 });
+
                 if (doRefresh) {
                     //DRY, performance
+                    that.allItems = null;
+                    Package.call(that, that.setup);
                     that.createItemsList();
-                    that.refresh();
+                    that.refresh(true);
                 }
             });
             // bind this to #refresh for listeners
@@ -591,6 +595,13 @@ version: 1.0.0
             if (hard) {
                 this.tiles = this.updateWrappers(this.elements, this);
             }
+
+            if (!this.setup) {
+                this.setup = {
+                    items: []
+                };
+            }
+
             // TODO: support LTR
             if (this.setup.direction != "vertical") {
                 this.setup.width = this.setup.width || innerWidth(this);
