Renamed juicytiles to layout.

--- a/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
@@ -40,7 +40,7 @@
                 line-height: 1.1;
             }
         </style>
-        <juicy-tiles-setup-sync api-url="/launcher/juicytilessetup"></juicy-tiles-setup-sync>
+        <juicy-tiles-setup-sync api-url="/sc/layout"></juicy-tiles-setup-sync>
         <juicy-tile-grid defaulttilesetup='{ "height": 82, "width": 80 }' gutter="10" refreshonmutation>
             <template is="dom-repeat" items="{{appsArray}}">
                 <div class="launchpad-tile">
