--- a/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
+++ b/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
@@ -2,7 +2,7 @@
 `launcher-root-partial` - Custom Element (w/ Polymer's TempalteBinding)
 with predefined template content, which should be used to include partials.
 It's just <template is="imported-template"> wrapped within <juicy-tiles> and layout editor.
-Uses juicy-tiles setup given from DB as juicyTilesSetup.
+Uses juicy-tiles setup given from DB as layout.
 version: 0.0.7
 
 @FIXME (tomalec): Use scoped Partial and layout data once implemented on server-side
@@ -18,7 +18,7 @@ version: 0.0.7
 
 <template id="partial-template">
     <juicy-tiles-setup-sync
-        api-url="/launcher/juicytilessetup"></juicy-tiles-setup-sync>
+        api-url="/sc/layout"></juicy-tiles-setup-sync>
     <juicy-tile-grid
         defaultTileSetup='{
             "precalculateHeight": true,
@@ -124,10 +124,10 @@ version: 0.0.7
         !this.partial.PartialId && console.warn("partial.PartialId for", this, "is missing.");
         if(this.isAttached && html){
           this.sync.setAttribute("name", this.partial.PartialId);
-          this.sync.storedValue = this.partial.juicyTilesSetup;
+          this.sync.storedValue = this.partial.layout;
           this.grid.setAttribute("name", this.partial.PartialId);
-          if(this.partial.juicyTilesSetup){
-            this.grid.setup = JSON.parse(JSON.stringify(this.partial.juicyTilesSetup));
+          if(this.partial.layout){
+            this.grid.setup = JSON.parse(JSON.stringify(this.partial.layout));
           }
           this.partial.Html && this.template.setAttribute("content", this.partial.Html);
           // debugger
