--- a/src/Launcher/wwwroot/sys/juicy-tiles-setup-sync/src/juicy-tiles-setup-sync.html
+++ b/src/Launcher/wwwroot/sys/juicy-tiles-setup-sync/src/juicy-tiles-setup-sync.html
@@ -23,7 +23,7 @@
                 storedValue: { type: Object, value: null, observer: "storedValueChanged" },
                 autoSave: { type: Boolean },
                 name: { type: String },
-                apiUrl: { type: String, value: "/juicytilessetup" },
+                apiUrl: { type: String, value: "/layout" },
                 tileList: { type: Object, value: null },
                 useLocalstorage: { type: Boolean, value: false }
             },
