Fix search input

--- a/src/Launcher/wwwroot/Launcher/elements/launcher-search-input/launcher-search-input.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-search-input/launcher-search-input.html
@@ -34,8 +34,9 @@
             },
             onKeyPress: function (e) {
                 if (e.which == 13) {
-                    this.set("submitAction", this.submitAction + 1);
-                    this.set("closeAction", this.closeAction + 1);
+                    setTimeout(function () {
+                        this.set("submitAction", this.submitAction + 1);
+                    }.bind(this), 100);
                 }
             },
             onBlur: function (e) {
