Make Home icon redirect to `/launcher`  - fixes #154

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -47,7 +47,7 @@
         </template>
 
         <div class="launcher-toolbar launcher-topbar">
-            <a href="/"><i id="homeIcon" class="glyphicon glyphicon-home"></i></a>
+            <a href="/launcher"><i id="homeIcon" class="glyphicon glyphicon-home"></i></a>
             <div class="launcher-theme">
                 <a href="javascript:" value="{{model.searchBar.submit$}}" onclick="++this.value" class="icon">
                     <i class="glyphicon glyphicon-search"></i>
