--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -32,6 +32,8 @@
     <link rel="import" href="/sys/juicy-display-router/juicy-display-router.html" />
     <link rel="import" href="/sys/juicy-redirect/src/juicy-redirect.html" />
 
+    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
     <!-- Style sheets -->
     <link rel="import" href="/sys/bootstrap.html" />
     <link rel="stylesheet" href="/Launcher/css/style.css" />
@@ -45,7 +47,7 @@
         </template>
 
         <div class="launcher-toolbar launcher-topbar">
-            <div style="margin-left: 0px;min-width: 195px;max-width: 195px;">
+            <div style="margin-left: 10px;min-width: 195px;max-width: 195px;">
                 <tu-logo-with-spinner></tu-logo-with-spinner>
             </div>
             <div class="toolbar-padding"></div>
