Add information that Opera is also a supported browser (closes #155)

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -179,12 +179,13 @@
     <div class="css-grid-error-back"></div>
     <div class="css-grid-error">
         <h4>This app requires support for CSS Grid Layout in your web browser</h4>
-        <p>To enable it in Google Chrome:</p>
+        <p>It is a new CSS feature that is currently implemented in Google Chrome and Opera.</p>
+        <p>To enable it in Google Chrome/Opera:</p>
         <ol>
             <li>Go to "chrome://flags"</li>
             <li>Search for "Enable experimental Web Platform features" option</li>
             <li>Press "Enable" link</li>
-            <li>Restart Chrome</li>
+            <li>Restart Chrome/Opera</li>
         </ol>
         <p>
             We are working on extending support to all modern web browsers.
