--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -68,7 +68,7 @@
             <core-field class="launcher-theme">
                 
                 <launcher-search-input placeholder="Search here..." value="{{model.searchBar.query$}}" close-action="{{model.searchBar.close$}}" submit-action="{{model.searchBar.submit$}}"></launcher-search-input>
-                <span style="padding-bottom: 5px;"><i class="fa fa-search" style="font-size:0.85em;"></i></span>
+                <span style="padding-bottom: 5px;"><i class="fa fa-search" style="font-size:0.80em;color:rbga(255,255,255,.5)"></i></span>
                 <link is="juicy-redirect" history url="{{model.searchBar.searchEngineResultPageUrl$}}" />
                 <template is="dom-if" if="{{model.searchBar.previewVisible}}">
                     <div class="preview">
@@ -81,12 +81,14 @@
             <template is="imported-template" content$="{{model.user.Html}}" model="{{model.user}}"></template>
 
             <!--<core-icon-button id="account" icon="account"></core-icon-button>-->
+            <!--
             <template is="dom-if" restamp if="{{!model.layoutModified$}}">
                 <paper-icon-button id="Paper-icon-button1" active="{{model.editingMode$}}" icon="settings" on-click="toggleEditor"></paper-icon-button>
             </template>
             <template is="dom-if" restamp if="{{model.layoutModified$}}">
                 <paper-icon-button id="settings" active="{{model.editingMode$}}" icon="settings" on-click="toggleEditor" class="modified" title="You have unsaved layout changes on this page!"></paper-icon-button>
             </template>
+            -->
         </div>
 
 
