--- a/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
@@ -14,9 +14,17 @@
             .launchpad-tile .launchpad-icon {
                 padding: 8px;
                 border-radius: 8px;
-                display: block;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                min-width: 64px;
                 min-height: 64px;
-                font-size: 0px;
+            }
+
+            .launchpad-tile .launchpad-icon img,
+            .launchpad-tile .launchpad-icon svg {
+                width: 64px;
+                height: 64px;
             }
 
             .launchpad-tile:hover .launchpad-icon {
