--- a/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
@@ -49,7 +49,7 @@
             }
         </style>
         <juicy-tiles-setup-sync api-url="/sc/layout"></juicy-tiles-setup-sync>
-        <juicy-tile-grid defaulttilesetup='{ "height": 82, "width": 80 }' gutter="10" refreshonmutation>
+        <juicy-tile-grid defaulttilesetup='{ "height": 82, "width": 80 }' gutter="10" refreshonmutation setup='{"width": 1000, "items": []}'>
             <template is="dom-repeat" items="{{appsArray}}">
                 <div class="launchpad-tile">
                     <a href="{{item.url}}">
@@ -88,7 +88,7 @@
 
                     if (app.name) {
                         var a = JSON.parse(JSON.stringify(app));
-                        
+
                         a.url = a.url || a.name.toLowerCase();
                         array.push(a);
                     }
